# JudgeFinder

./: .gitignore  README.md  build.gradle.kts  pyproject.toml  settings.gradle.kts  setup.py
config/: config.example.toml
docs/: judgefinder-cli-usage.md  municipal-rss-sources.md  municipality-test-status.md  seongbuk-source.md
src/judgefinder/: bootstrap.py
src/judgefinder/adapters/: __init__.py  config.py  source_registry.py
src/judgefinder/adapters/sources/: __init__.py
src/judgefinder/adapters/sources/municipal_rss/: parser.py  (+2 more)
src/judgefinder/application/: __init__.py  use_cases.py
src/judgefinder/domain/: __init__.py  entities.py  ports.py  source_profiles.py
src/judgefinder/infrastructure/db/: __init__.py  models.py  repository.py  session.py
src/judgefinder/infrastructure/http/: __init__.py  client.py
src/judgefinder/interfaces/: __init__.py
src/judgefinder/interfaces/cli/: __init__.py  main.py
tests/fixtures/: cheorwon_rss.xml  hanam_rss.xml  jecheon_rss.xml  okcheon_rss.xml  pocheon_eminwon_list.html  pocheon_rss.xml  sample_city_list.html  seongbuk_rss.xml
tests/integration/: test_collect_use_case_sqlite.py  test_collect_use_case_sqlite_municipal_rss.py  test_collect_use_case_sqlite_seongbuk.py
tests/unit/: test_cli_date_range.py  test_collect_use_case_resilience.py  test_config_source_profiles.py  test_generic_engine_parser.py  test_generic_engine_source.py  test_municipal_rss_parser.py  test_pocheon_eminwon_parser.py  test_pocheon_eminwon_source.py  test_sample_city_parser.py  test_seongbuk_parser.py  test_source_registry_profiles.py
(+37 files in other folders)
